[package]
name = "Anime4k-ssvm-nodejs"
version = "0.1.0"
authors = ["Andra Antariksa <andra.antariksa@gmail.com>"]
edition = "2018"

[package.metadata.ssvmup.profile.release]
wasm-opt = ['-O4']

[lib]
name = "ssvm_nodejs_starter_lib"
path = "src/lib.rs"
crate-type =["cdylib"]

[dependencies]
wasm-bindgen = "=0.2.61"
js-sys = "0.3.*"
raster = { git = "https://github.com/kosinix/raster.git" }

[dependencies.image]
version = "0.23.8"
default-features = false
features = ["gif", "jpeg", "ico", "png", "pnm", "tga", "tiff", "webp", "bmp", "dxt", "dds", "farbfeld"]
jpeg_rayon = []
